Remove slither exclusion

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "web3": "^1.6.1"
   },
   "scripts": {
-    "slither": "slither --exclude-dependencies --exclude-informational --exclude-low --exclude=reentrancy-eth,reentrancy-no-eth,divide-before-multiply .",
+    "slither": "slither --exclude-dependencies --exclude-informational --exclude-low --exclude=reentrancy-eth,reentrancy-no-eth .",
     "clean": "hardhat clean",
     "compile": "hardhat compile",
     "test": "hardhat test"
