--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "author": "Nomspace",
   "license": "MIT",
   "dependencies": {
+    "@celo-tools/celo-ethers-wrapper": "^0.1.0",
+    "@ensdomains/ens-contracts": "^0.0.8",
+    "@ensdomains/ensjs": "^2.0.1",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-truffle5": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@openzeppelin/contracts": "^4.3.2",
+    "@openzeppelin/contracts": "^4.1.0",
     "@truffle/hdwallet-provider": "^1.0.17",
     "@typechain/ethers-v5": "^8.0.5",
     "@typechain/hardhat": "^3.0.0",
@@ -18,6 +21,7 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^10.0.0",
+    "eth-ens-namehash": "^2.0.8",
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.5.2",
     "hardhat": "^2.7.1",
