--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "web3": "^1.6.1"
   },
   "scripts": {
-    "slither": "slither --exclude-dependencies --exclude-informational --exclude-low --exclude=reentrancy-eth,reentrancy-no-eth,name-reused .",
+    "slither": "slither --exclude-dependencies --exclude-informational --exclude-low --exclude=reentrancy-eth,reentrancy-no-eth,name-reused,uninitialized-state-variables .",
     "clean": "hardhat clean",
     "compile": "hardhat compile",
     "test": "hardhat test"
