--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ethers": "^5.5.2",
     "hardhat": "^2.7.1",
     "truffle": "^5.1.29",
+    "truffle-plugin-verify": "^0.5.21",
     "typechain": "^6.0.5",
     "web3": "^1.6.1"
   },
